--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -305,7 +305,7 @@ div:nth-of-type(2) > .list > .roomState .star {
 .roomState.hideName.savedGame .details h3 {
   display: none;
 }
-.roomState.hideName.savedGame .details h4 {
+.roomState.savedGame .details h4 {
   padding: 11px 16px 12px 16px;
   margin: 0;
 }
