Add icons, images, and text to holders (#2634)
* Add icons, images, and text to holders

Builds on #1937. Supersedes #2126.

For text, it works like the text and icon combo on basic widgets and buttons, etc.  This should have the smallest impact (i.e., none) on child widgets inheriting css tweaks on the holder itself.

* Move updateIcon for holders to holder class

* added legacy mode to disable new image/text/icon capabilities

* Update Holder Appearance tutorial variant

* Minor tutorial tweak

* less technical text in the legacy mode description

* remove hardcoded check for holder in ImageWidget

* Smaller icons on holders

* Reduce starting font size

* Add support for background color and opacity and background image opacity

* Fix text not being removed immediately

* Add opacity to icons

* Fix non-holder text size

* Icon tutorial updates: add mention of icons in holders and icon opacity

* Add new Appearance - Holder tutorial; remove appearance variant from holder type tutorial

* Add hoverOpacity; update default holder opacity to 0.2 same as images

* Update 2 tutorial variants with hoverOpacity info

* Fix default for opacity in json editor

* Update Properties-Icon and Types-Holders tutorials

This makes the tutorials what they are on main currently to reduce conflict resolution. I will update them again later.

* Fix validation and legacy mode problems with Holder Appearance tutorial

Validator still needs a tweak to fix some of this

* Update holder validator with new properties

* Remove Appearance variant from Types - Holder tutorial

* Update Properties - Icons: Advanced tutorial

* Update Properties - Icons: Basic tutorial

* removed extra output from library check

* moved special cases for holders to the Holder class

* added `color` property to holders

* added `textColor` property

* Major overhaul of Types-Holders tutorial

Variants 0 and 1 are new. Variants 2 and 3 are updated. Variant 4 is only very slightly modified. Variant 5 is updated.


--- a/client/css/widgets/holder.css
+++ b/client/css/widgets/holder.css
@@ -1,5 +1,8 @@
 .holder {
-  background: white;
+  --bgColor: white;
+  --bgColorOpacity: 1;
+  background: var(--bgColor);
+  background: color-mix(in srgb, var(--bgColor) calc(var(--bgColorOpacity) * 100%), transparent);
   box-sizing: border-box;
   border-width: 1px;
   border-style: solid;
@@ -13,6 +16,42 @@
 .holder > .widget {
   left: -1px;
   top: -1px;
+}
+
+.widget.holder > .holderTextOnly {
+  position: absolute;
+  inset: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: var(--holderTextColor);
+  font-weight: bold;
+  overflow: hidden;
+  word-break: normal;
+  white-space: normal;
+  line-height: 1.1;
+  box-sizing: border-box;
+}
+
+.widget.holder.hasImage {
+  background-image: none;
+}
+
+.widget.holder.hasImage::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: var(--bgImage);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  opacity: var(--bgImageOpacity, 0.2);
+  border-radius: inherit;
+  pointer-events: none;
 }
 
 .holder.transparent {
