better connection monitoring and player status

--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -395,7 +395,6 @@ body.aspectTooGood.hiddenToolbar {
       background: var(--toolbarColor);
       box-shadow: 0 0 5px #0005;
       pointer-events: none;
-      transition: color 0.3s ease;   
     }
 
     body:not(.loading) .toolbarButton:hover .tooltip, body.wideToolbar .toolbarButton .tooltip {
@@ -733,7 +732,8 @@ body.aspectTooGood.hiddenToolbar {
   flex-direction: column;
   padding: 5% 10%;
   box-sizing: border-box;
-  overflow: auto
+  overflow: auto;
+  z-index: 10;
 }
 
 .overlay h1 {
@@ -938,10 +938,6 @@ button {
   background-repeat: no-repeat;
   margin: 1px;
   transition: color 0.3s ease
-}
-
-button.playerChange .tooltip.playerChange {
-  color: yellow
 }
 
 button:hover {
